refactor(Board): 생성자 변경 및 함수 로직 수정